Fixed bodyContainer wrapping in details.js

--- a/client/src/css/Details.css
+++ b/client/src/css/Details.css
@@ -16,12 +16,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 80%;
-  min-height: 600px;
-  height: 700px;
-  align-self: center;
-  margin: 3rem;
+  width: 100%;
+  min-height: 500px;
+  margin: 2rem;
+  margin-top: 100px;
+
   background-color: white;
 }
 
